Try to fix padding problem on mobile view

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -226,6 +226,7 @@ button, .nav-tools-search {
   }
   .nav-links {
     padding-left: 4%;
+    overflow: hidden;
   }
 }
 @media only screen and (max-width: 850px){
